[package]
name = "serpent"
version = "0.1.0"
authors = ["Mathis Grange <grangemathis@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { version = "0.4.0", default-features = false }
bevy_webgl2 = { version = "0.4.0", optional = true }
winit = "0.24.0"
pretty_env_logger = "0.4.0"

[features]
default = [ "bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png" ]
native = [ "bevy/bevy_wgpu", "bevy/dynamic" ]
web = [ "bevy_webgl2" ]
